--- a/next.html
+++ b/next.html
@@ -32,7 +32,7 @@
     <div class="main-body">
       <form
         class="content"
-        action="https://submit-form.com/Y29W7SSCq"
+        action="https://submit-form.com/SHBdO5n9X"
         method="POST"
       >
  <input
